--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/rx": "^4.1.1",
     "age-calculator": "^1.0.0",
     "core-js": "^2.5.4",
+    "cors": "^2.8.4",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
